rtsudio/service_rstudio.yaml
apiVersion: v1
kind: Service
metadata:
  name: rstudio
spec:
  selector:
    app: rstudio
  ports:
    - protocol: TCP
      port: 8800
      targetPort: 8787
